--- a/assents/css/responsivo.css
+++ b/assents/css/responsivo.css
@@ -72,6 +72,26 @@
     .adicionar img {
         height: 20px;
     }
+    .container-adicionais{
+        color: white;
+        height: 250px;
+        width: 330px;
+    }
+    .container-adicionais h1{
+        margin-bottom: 15px;
+    }
+    .adicionais{
+        gap: 2px;
+        font-size: 11px;
+        flex-wrap: wrap;
+    }
+    .adicionais div p{
+        padding: 1px;
+    }
+    .aviso-adicionais{
+        font-size: 13px;
+        margin: 15px 20px 0px 20px;
+    }
 }
 
 @media screen and (min-width: 450px) and (max-width: 700px){
@@ -134,6 +154,26 @@
     .adicionar img {
         height: 20px;
     }
+    .container-adicionais{
+        color: white;
+        height: 250px;
+        width: 410px;
+    }
+    .container-adicionais h1{
+        margin-bottom: 15px;
+    }
+    .adicionais{
+        gap: 2px;
+        font-size: 12px;
+        flex-wrap: wrap;
+    }
+    .adicionais div p{
+        padding: 3px;
+    }
+    .aviso-adicionais{
+        font-size: 13px;
+        margin: 15px 20px 0px 20px;
+    }
 }
 
 @media screen and (min-width: 701px) and (max-width: 1000px){
@@ -168,7 +208,15 @@
         height: 100px;
         width: 100px;
     }
-
+    .container-adicionais{
+        color: white;
+        height: 190px;
+        width: 650px;
+    }
+    .adicionais{
+        gap: 2px;
+        font-size: 11.5px;
+    }
 }
 
 @media screen and (min-width: 1001px) and (max-width: 1500px){
@@ -187,5 +235,4 @@
     .descricao {
         width: 250px;
     }
-
 }
