--- a/assents/css/estilo.css
+++ b/assents/css/estilo.css
@@ -8,7 +8,8 @@ body {
 }
 
 /*DISPLAYS FLEX*/
-.container-carrinho, .fechar-carrinho, .produtos-adicionados nav, .container-dados-adicionais, .dados-externo, .nome-user,.menu, .menu a, .abertura-carrinho, .nome-logo, .cardapio, .funcionamento, .dias, .container-two, .tipos, .adicionar, .container-one, .container-adicionais, .adicionais, footer{
+.container-carrinho, .fechar-carrinho, .produtos-adicionados nav, .container-dados-adicionais, .dados-externo, .nome-user,.menu, .menu a, .abertura-carrinho, .nome-logo, .cardapio, .funcionamento, .dias, .container-two, .tipos, 
+.adicionar, .container-one, .area-troco, .container-adicionais, .adicionais, footer{
     display: flex;
     justify-content: center;
     align-items: center;
@@ -119,7 +120,7 @@ body {
     font-weight:600;
     font-size: 12px;
     display: none;
-    margin: 0px 0px 10px 10px  ;
+    margin: 0px 0px 10px 10px;
     background-size: 300% 100%;
     background-image: linear-gradient(to left, rgb(255, 255, 255), rgba(254, 255, 252, 0.856), rgb(255, 62, 62), rgba(255, 255, 255, 0.726), rgba(255, 255, 255, 0.678));
     animation: degrade 5s infinite alternate;
@@ -143,7 +144,7 @@ body {
 .dados-externo{
     height: 500px;
     width: 350px;
-    content: '';
+    content: ' ';
     background-image: url(../imagens//Icones/hamburguer-colorido.png);
     border: 3px solid burlywood;
     background-position: center;
@@ -205,11 +206,6 @@ select{
     backdrop-filter: blur(5px);
     color: white;
 }
-.area-troco{
-    display: flex;
-    justify-content: center;
-    align-items:center;
-}
 .SN, .troco{
     display: none;
 }
@@ -244,7 +240,7 @@ select{
 .container-one{
     height: 100dvh;
     width: 100%;
-    content: "";
+    content: " ";
     background-image: url(../imagens/imagem-de-fundo-inicial.png);
     background-position: center;
     background-repeat: no-repeat;
@@ -284,7 +280,7 @@ select{
     top: 10px;
     gap: 20px;
     width: 270px;
-    font-family: 'Kalam', cursiva;
+    font-family: 'Kalam', cursive;
     z-index: +1;
 }
 .menu a{
@@ -366,7 +362,7 @@ select{
     height: 300px;
     max-width: 1440px;
     text-align: center;
-    font-family:'Kalam', cursiva;
+    font-family:'Kalam', cursive;
     font-size: 25px;
     border: 1px solid black;
     color: white;
@@ -465,7 +461,7 @@ select{
     border: 1px solid black;
     text-align: center;
     border-radius: 50px;
-    content:'';
+    content:' ';
     background-image: url(../imagens/img-adicionais.png);
     background-position: center;
     background-size: cover;
@@ -474,7 +470,7 @@ select{
 .container-adicionais h1{
     font-size:18px;
     margin-bottom: 20px;
-    font-family: "Merienda", cursiva;
+    font-family: "Merienda", cursive;
 }
 .adicionais{
     gap: 10px;
