--- a/assents/css/estilo.css
+++ b/assents/css/estilo.css
@@ -367,7 +367,7 @@ select{
     border: 1px solid black;
     color: white;
     content: '';
-    background-image: url(../imagens/imagem-do-funcionamento.png);
+    background-image: url(../imagens/imagem-funcionamento.jpeg);
     background-position: center;
     background-size: cover;
     margin-bottom: 20px;
