--- a/assents/css/estilo.css
+++ b/assents/css/estilo.css
@@ -145,7 +145,7 @@ body {
     height: 500px;
     width: 350px;
     content: ' ';
-    background-image: url(../imagens//Icones/hamburguer-colorido.png);
+    background-image: url(../imagens/Icones/hamburguer-colorido.png);
     border: 3px solid burlywood;
     background-position: center;
     background-repeat: no-repeat;
@@ -241,7 +241,7 @@ select{
     height: 100dvh;
     width: 100%;
     content: " ";
-    background-image: url(../imagens/imagem-de-fundo-inicial.png);
+    background-image: url(../imagens/background-inicial.jpeg);
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
