--- a/assents/css/estilo.css
+++ b/assents/css/estilo.css
@@ -14,6 +14,7 @@ body {
     align-items: center;
 }
 
+
 /*CARRINHO DE COMPRA*/
 .container-carrinho{
     height: 100%;
@@ -591,6 +592,9 @@ select{
     font-size: 13px;
     margin: 20px 30px 0px 30px ;
 }
+
+
+/*RODAPÉ*/
 footer{
     height: 100px;
     background-color: rgba(0, 0, 0, 0.932);
