--- a/assents/css/estilo.css
+++ b/assents/css/estilo.css
@@ -8,7 +8,7 @@ body {
 }
 
 /*DISPLAYS FLEX*/
-.container-carrinho, .fechar-carrinho, .produtos-adicionados nav, .valor-add,.container-dados-adicionais, .dados-externo, .nome-user,.container-bairro, .container-interno-bairro, .menu, .menu a, .abertura-carrinho, .nome-logo, .cardapio, .funcionamento, .dias, .container-two, .tipos, .adicionar, .container-one, .area-troco, .container-taxa,.container-adicionais, .adicionais, footer{
+.container-carrinho, .fechar-carrinho, .produtos-adicionados nav, .valor-add,.container-dados-adicionais, .dados-externo, .formulario, .nome-user, .valores-finais, .container-bairro, .container-interno-bairro, .menu, .menu a, .abertura-carrinho, .nome-logo, .cardapio, .funcionamento, .dias, .container-two, .tipos, .adicionar, .container-one, .area-troco, .container-taxa,.container-adicionais, .adicionais, footer{
     display: flex;
     justify-content: center;
     align-items: center;
@@ -108,24 +108,153 @@ body {
     color:#4d4646;
 }
 #add-dados{
-    border-radius: 10px;
-    padding: 10px;
-    border: 1px solid rgb(0, 0, 0);
+    display: none;
+    border: none;
+    border-radius: 5px;
+    padding: 10px 15px;
     cursor: pointer;
     font-family:'Montserrat';
     font-weight:600;
     font-size: 12px;
-    display: none;
     margin: 0px 0px 10px 10px;
-    background-size: 300% 100%;
-    background-image: linear-gradient(to left, rgb(255, 255, 255), rgba(254, 255, 252, 0.856), rgb(255, 62, 62), rgba(255, 255, 255, 0.726), rgba(255, 255, 255, 0.678));
-    animation: degrade 5s infinite alternate;
+    background-color: rgb(110, 4, 5);
+    color: white;
+    border: 1px solid transparent;
 }
 #add-dados:hover{
-    color:white;
-    background-image: linear-gradient(to left, rgb(0, 0, 0), rgba(0, 0, 0, 0.856), rgb(255, 62, 62), rgba(0, 0, 0, 0.726), rgba(0, 0, 0, 0.678));
+    color: silver;
+    border: 1px solid silver;
 }
 
+
+/*DADOS ADICIONAIS*/
+.container-dados-adicionais{
+    display: none;
+    height: 100%;
+    width: 100%;
+    position: fixed;
+    background-color: rgba(0, 0, 0, 0.534);
+    backdrop-filter: blur(30px);
+    z-index: +100;
+    font-family:'Montserrat';
+}
+.dados-externo{
+    padding: 30px 0px;
+    width: 360px;
+    border: 1px solid rgb(110, 4, 5);
+    border-radius: 5px;
+    background-color: silver;
+    text-align: center;
+    flex-direction: column;
+}
+.retornar{
+    background-color: rgba(124, 122, 122, 0.685);
+    border-radius: 5px;
+    position: relative;
+    bottom: 5px;
+    padding: 3px;
+    backdrop-filter:blur(10px);
+    color: rgb(0, 0, 0);
+    border: none;
+    cursor: pointer;
+    transition: all 1s;
+}
+.retornar:hover{
+    color: rgb(184, 14, 14);
+}
+.dados-externo h1{
+    font-size: 25px;
+    color: rgb(0, 0, 0);
+    font-weight: 600;
+    margin: 20px 0px 0px 0px;
+}
+.formulario{
+    background-color: #c0bdbd;
+    flex-direction: column;
+    margin: 30px 0px;
+    border: 1px solid rgb(138, 132, 132);
+    border-radius: 3px;
+    padding: 20px 10px;
+}
+.dados-externo input, select{
+    outline: none;
+    font-family:'Montserrat';
+}
+.nome-user input, .troco{
+    height: 35px;
+    width: 300px;
+    padding: 5px 10px;
+    background-color: transparent;
+    border: none;
+    border-bottom: 1px solid rgb(83, 80, 80);
+    margin-bottom: 15px;
+    color: rgb(0, 0, 0);
+    font-size: 17px;
+    font-weight: 500;
+}
+.nome-user input::placeholder{
+    color: #4b4949; 
+}
+.area-troco{
+    flex-direction: column;
+}
+select{
+    height: 35px;
+    font-size: 17px;
+    font-weight: 500;
+    border: none;
+    background-color: transparent;
+    border-bottom: 1px solid rgb(83, 80, 80);
+    color: rgb(0, 0, 0);
+    margin-bottom: 15px;
+}
+.SN, .troco{
+    display: none;
+    margin-top: 5px;
+}
+.troco{
+    width: 140px;
+    text-align: center;
+}
+.troco::placeholder{
+    color: #4b4949;
+    font-size: 15px;
+}
+.container-taxa{
+    margin: 0px 0px 30px 0px;
+    background-color: black;
+    padding: 5px;
+    border-radius: 5px;
+    gap: 5px;
+}
+.container-taxa input{
+    background-color: black;
+    color: white;
+    font-size: 16px;
+    border: none;
+    cursor: pointer;
+}
+.enviar{
+    font-weight: 500;
+    padding: 10px 20px;
+    cursor: pointer;
+    background-color: rgb(110, 4, 5);
+    color: white;
+    border: 1px solid transparent;
+    border-radius: 5px;
+    margin: 0px 0px 30px 0px;
+}
+.enviar:hover{
+    border: 1px solid silver;
+}
+.valores-finais{
+    width: 100%;
+    justify-content: space-around;
+}
+.valorTot{
+    text-align: end;
+    font-size: 18px;
+}
 
 /*ESCOLHA DO BAIRRO*/
 .container-bairro{
@@ -187,144 +316,6 @@ button:hover{
 }
 
 
-/*DADOS ADICIONAIS*/
-.container-dados-adicionais{
-    display: none;
-    height: 100%;
-    width: 100%;
-    position: fixed;
-    background-color: rgba(0, 0, 0, 0.534);
-    backdrop-filter: blur(30px);
-    z-index: +100;
-    font-family:'Montserrat';
-}
-.dados-externo{
-    height: 550px;
-    width: 355px;
-    content: '';
-    background-image: url(../imagens/Icones/hamburguer-colorido.png);
-    border: 3px solid burlywood;
-    border-radius: 10px;
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: contain;
-    background-color: rgba(240, 248, 255, 0.575);
-    text-align: center;
-    flex-direction: column;
-    gap: 13px;
-}
-.retornar{
-    background-color: rgba(255, 255, 255, 0.685);
-    height: 30px;
-    width: 70px;
-    border-radius: 20px;
-    position: relative;
-    bottom: 5px;
-    padding: 3px;
-    backdrop-filter:blur(10px);
-    color: rgb(0, 0, 0);
-    border: none;
-    cursor: pointer;
-    transition: all 1s;
-}
-.retornar:hover{
-    color: rgb(255, 255, 255);
-    background-color: rgba(0, 0, 0, 0.589);
-}
-.dados-externo h1{
-    font-size: 21px;
-    color: rgb(0, 0, 0);
-    font-weight: 600;
-}
-.dados-externo input, select{
-    outline: none;
-    font-family:'Montserrat';
-}
-.nome-user {
-    height: 50px;
-}
-.nome-user input, .troco{
-    height: 35px;
-    width: 300px;
-    padding: 5px 10px;
-    background-color:#0000009c;
-    backdrop-filter: blur(1px);
-    color: white;
-    border: none;
-    border-bottom: 0.5px solid white;
-    font-size: 17px;
-}
-.nome-user input::placeholder{
-    color: #c5c1c1;
-}
-.area-troco{
-    flex-direction: column;
-}
-select{
-    height: 35px;
-    font-size: 17px;
-    background-color:#0000009c;
-    backdrop-filter: blur(5px);
-    color: white;
-    border: none;
-}
-.SN, .troco{
-    display: none;
-    margin-top: 5px;
-}
-.troco{
-    width: 140px;
-    text-align: center;
-}
-.troco::placeholder{
-    color: #c5c1c1;
-    font-size: 15px;
-}
-.container-taxa{
-    justify-content: space-between;
-    background-color: #ffffffd5;
-    padding: 5px;
-    width: 100%;
-}
-.container-taxa input{
-    padding: 5px;
-    background-color: #000000a1;
-    color: white;
-    border: none;
-    cursor: pointer;
-    border-radius: 5px;
-}
-.container-taxa:hover #editar-bairro{
-    color: rgb(252, 52, 52);
-}
-.dados p{
-    font-weight: 500;
-    color: rgb(255, 255, 255);
-    font-size: 13px;
-    backdrop-filter: blur(5px);
-    padding: 10px;
-    background-color:#0000009c
-}
-.enviar{
-    font-weight: 500;
-    padding: 10px 20px;
-    cursor: pointer;
-    background-color: rgba(0, 0, 0, 0.911);
-    color: white;
-    border: 1px solid transparent;
-    border-radius: 20px;
-    transition: all 1s;
-}
-.enviar:hover{
-    color: black;
-    background-color: white;
-}
-.valorTot{
-    margin-top:40px;
-    width: 100%;
-    text-align: end;
-    font-size: 18px;
-}
 
 
 /*PRIMEIRA PARTE VISIVEL DO SITE (imagem de entrada e escolhas)*/
@@ -348,15 +339,13 @@ select{
     cursor: pointer;
     z-index: +3;
     transition: all 1s;
-    border: 1px solid white;
 }
 .abertura-carrinho img{
     height: 35px;
     margin-right: 3px;
 }
 .abertura-carrinho:hover{
-    background-color: blue;
-    border: 1px solid transparent;
+    border: 1px solid white;
 }
 .container-one:hover .nome-logo {
     opacity: 0;
@@ -509,7 +498,7 @@ select{
     width: 1400px;
 }
 .container-interno {
-    border: 0.5px solid black;
+    border: 0.5px solid rgb(117, 109, 109);
     padding: 5px;
     width: 650px;
     height: 165px;
@@ -517,9 +506,10 @@ select{
     justify-content: space-between;
     transition: all 1s ease;
     margin: 10px 0px 5px 0px;
+    border-radius: 3px;
 }
 .container-interno:hover {
-    border: 0.5px solid rgb(245, 74, 44);
+    border: 0.5px solid rgb(0, 0, 0);
 }
 .imagens-ilustrativas img {
     transition: all 0.5s ease-in;
@@ -548,15 +538,13 @@ select{
     cursor: pointer;
     background-color: rgb(20, 48, 170);
     position: relative;
-    border-radius: 5px;
-    border: 1px solid white;
-    transition: all 0.5s ease;
+    border-radius: 3px;
 }
 .adicionar img {
     height: 25px;
 }
 .adicionar:hover{
-    background-color: red;
+    border: 1px solid silver;
 }
 
 /*ADICIONAIS*/
